--- a/pages/C01数据结构.md
+++ b/pages/C01数据结构.md
@@ -1,6 +1,6 @@
 <h1 align="center">数据结构</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-12-13</div>
 
 ## 数据结构三要素
 
@@ -22,7 +22,7 @@
 
 注：1.时间复杂度算的是index的自增/自减的速度。
 
-        2.数量级排序：常($1$) < 对($logn$) < 幂($n^2)$ < 指($2^n$) < 阶($n^n$)
+        2.数量级排序：常($1$) < 对($logn$) < 幂($n^2)$ < 指($2^n$) < 阶($n!$)
 
 ---
 
@@ -34,17 +34,17 @@
 
 #### 静态分配
 
-        定义
+        定义：静态指被分配的最大空间是固定的
 
 ```cpp
-#define MaxSize 10
+const int MaxSize = 10;
 struct SqList{
-    int data[MaxSize];
-    int length;
+    int data[MaxSize];   //静态数组与固定最大空间的确定
+    int length;    //当前数组长度、指向末尾空位
 };
 ```
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitList(SqList &L){
@@ -53,18 +53,20 @@ void InitList(SqList &L){
     }
     L.length = 0;
 }
+SqList L;
+InitList(L);
 ```
 
         插入：插入位置及后边元素往后挪动
 
 ```cpp
-bool InsertList(SqList &L,int i,int e){    //i是位置，不是下标
-    if(i < 1 || i > L.length + 1){return false;}
-    if(L.length >= Maxsize){return false;}
-    for(int k = L.length; k >= i; k--){
-        L.data[k] = L.data[k-1];
+bool InsertList(SqList &L,int k,int e){    //k是位置,e是元素
+    if(k < 1 || k > L.length + 1){return false;}    //越界判断
+    if(L.length >= MaxSize){return false;}    //判满
+    for(int i = L.length; i >= k; i--){    //i是下标
+        L.data[i] = L.data[i-1];
     }
-    L.data[i-1] = e;
+    L.data[k-1] = e;
     L.length++;
     return true; 
 }
@@ -73,11 +75,11 @@ bool InsertList(SqList &L,int i,int e){    //i是位置，不是下标
          删除：删除位置后边元素往前挪动
 
 ```cpp
-bool DeleteList(SqList &L,int i,int &e){
-    if(i < 1 || i > L.length){return false;}{return false;}
-    e = L.data[i-1];
-    for(int k = i; k < L.length; k++){
-        L.data[k-1] = L.data[k];
+bool DeleteList(SqList &L,int k,int &e){    //k是位置,e是元素
+    if(k < 1 || k > L.length){return false;}    //越界判断
+    e = L.data[k-1];
+    for(int i = k-1; i < L.length; i++){    //i是下标
+        L.data[i] = L.data[i+1];
     }
     L.length--;
     return true;
@@ -88,9 +90,9 @@ bool DeleteList(SqList &L,int i,int &e){
 
 ```cpp
 int SearchList(SqList L,int e){
-    for(int k = 0; k < L.length; k++){
-        if(L.data[k] == e){
-            return k+1;
+    for(int i = 0; i < L.length; i++){    //i是下标
+        if(L.data[i] == e){
+            return i+1;
         }
     }
     return 0;
@@ -104,52 +106,65 @@ int SearchList(SqList L,int e){
         定义
 
 ```cpp
-#define InitSize 10
+const int InitSize = 10;
 struct SqList{
-    int *data;
-    int MaxSize;
-    int length;
+    int *data;    //动态数组起点指针
+    int MaxSize;    //动态数组当前被分配的最大空间
+    int length;    //当前数组长度、指向末尾空位
 };
 ```
 
-        初始化：malloc与free函数法
+        实例化初始化、动态扩容：malloc与free函数法
 
 ```cpp
 bool InitList(SqList &L){
     L.data = (int*)malloc(InitSize*sizeof(int));
-    if(!L.data){return false;}
-    for(int i = 0; i < MaxSize; i++){
+    if(!L.data){return false;}    //判满
+    for(int i = 0; i < InitSize; i++){    //初始化
         L.data[i] = 0;
     }
     L.length = 0;
     L.MaxSize = InitSize;
     return true;
 }
-void IncreaseSize(SqList &L,int len){
+SqList L;
+InitList(L);
+void IncreaseSize(SqList &L,int len){    //len是新增长度
     int *p = L.data;
     L.data = (int*)malloc((L.MaxSize+len)*sizeof(int));
     L.MaxSize += len;
-    for(int i = 0; i < L.length; i++;){
+    for(int i = 0; i < L.length; i++){    //复制数组
         L.data[i] = p[i];
+    }
+    for(int i = L.length; i < L.MaxSize; i++){//初始化新增空间
+        L.data[i] = 0;
     }
     free(p);
 }
 ```
 
-        初始化：new与delete关键字法
+        实例化初始化、动态扩容：new与delete关键字法
 
 ```cpp
 void InitList(SqList &L){
-    L.data = new int[InitSize]{0};    //申请堆区空间，并且初始化为0
+    L.data = new int[InitSize];    //申请堆区空间
+    for(int i = 0; i < InitSize; i++){    //初始化
+        L.data[i] = 0;
+    }
     L.length = 0;
     L.MaxSize = InitSize;
 }
-void IncreaseSize(SqList &L,int len){
+SqList L;
+InitList(L);
+void IncreaseSize(SqList &L,int len){    //len是新增长度
     int *p = L.data;
     L.data = new int[L.MaxSize+len];
     L.MaxSize += len;
-    for(int i = 0; i < L.length; i++;){
+    for(int i = 0; i < L.length; i++){    //复制数组
         L.data[i] = p[i];
+    }
+    for(int i = L.length; i < L.MaxSize; i++){    //初始化新增空间
+        L.data[i] = 0;
     }
     delete p;
 }
@@ -163,46 +178,50 @@ void IncreaseSize(SqList &L,int len){
 
 ```cpp
 typedef struct LNode{
-    int data;
-    struct LNode *next;
-}LNode,*LinkList;
+    int data;    //结点数据
+    LNode *next;    //指向下一结点的指针
+}*LinkList;
 ```
 
 #### 不带头结点
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitList(LinkList &L){
     L = NULL;
 }
+LinkList L;    //等效于LNode* L，用首部指针表示整个单链表
+InitList(L);
 ```
 
 #### 带头结点
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitList(LinkList &L){
     L = new LNode();
-    L->next = NULL;
-}
+    L->next = NULL;    //->是访问结构体指针指向的结构体成员
+}    //因为没有*L.next，所以用L->next，或者用L[0].next
+LinkList L;
+InitList(L);
 ```
 
         插入：找到前驱结点，有头结点更方便
 
 ```cpp
-bool InsertList(LinkList &L,int i,int e){
-    if(i < 1){return false;}
+bool InsertList(LinkList &L,int k,int e){    //k是位置，e是元素
+    if(k < 1){return false;}    //越界判断
     LNode *p = L;
-    for(int k = 0; k < i-1; k++){
+    for(int i = 0; i < k-1; i++){    //i是下标，找前驱
         p = p->next;
-        if(p == NULL){return false;}
+        if(p == NULL){return false;}    //越界判断
     }
     LNode *s = new LNode();
     s->data = e;
     s->next = p->next;
-    p->next = s;   
+    p->next = s;
     return true;
 }
 ```
@@ -210,12 +229,12 @@ bool InsertList(LinkList &L,int i,int e){
         删除：找到前驱结点，有头结点更方便
 
 ```cpp
-bool DeleteList(LinkList &L,int i,int &e){
-    if(i < 1){return false;}
+bool DeleteList(LinkList &L,int k,int &e){    //k是位置，e是元素
+    if(k < 1){return false;}    //越界判断
     LNode *p = L;
-    for(int k = 0; k < i-1; k++){
+    for(int i = 0; i < k-1; i++){    //i是小标，找前驱
         p = p->next;
-        if(p == NULL){return false;}
+        if(p == NULL){return false;}    //越界判断
     }
     LNode *s = p->next;
     p->next = s->next;
@@ -228,12 +247,12 @@ bool DeleteList(LinkList &L,int i,int &e){
         查找：按位查找
 
 ```cpp
-LNode * QueryList(LinkList &L,int i){
-    if(i < 1){return false;}
+LNode * QueryList(LinkList &L,int k){    //k是位置
+    if(k < 1){return NULL;}    //越界判断
     LNode *p = L;
-    for(int k = 0; k < i; k++){
+    for(int i = 0; i < k; i++){    //i是下标
         p = p->next;
-        if(p == NULL){return NULL;}
+        if(p == NULL){return NULL;}    //越界判断
     }
     return p;
 }
@@ -242,7 +261,7 @@ LNode * QueryList(LinkList &L,int i){
         查找：按值查找
 
 ```cpp
-LNode * QueryList(LinkList &L,int e){
+LNode * QueryList(LinkList &L,int e){    //e是元素
     LNode *p = L->next;
     while(p != NULL && p->data != e){
         p = p->next;
@@ -259,9 +278,9 @@ LNode * QueryList(LinkList &L,int e){
 
 ```cpp
 typedef struct DNode{
-    int data;
-    struct DNode *pre,*next;
-}DNode,*DLinkList;
+    int data;    //数据
+    DNode *pre,*next;    //指向前后结点的2个指针
+}*DLinkList;
 ```
 
 ---
@@ -280,25 +299,28 @@ typedef struct DNode{
 
 ### 静态链表
 
-        定义
+        定义：静态指被分配的最大空间是固定的，采取结构体数组的连续分配方式。
 
 ```cpp
-#define MaxSize 10
+const int MaxSize = 10;
 typedef struct SNode{
-    int data;
+    int data;    //结点数据
     int next;    //下一个结点的数组下标
-}SLinkList[MaxSize];
+}SLinkList[MaxSize];    //静态链表固定最大空间的确定
 ```
 
         初始化：头结点位置在0号下标，-1表示置空，-2表示未使用
 
 ```cpp
-void InitList(SNode &L){
-    L->next = -1
+void InitList(SLinkList &L){
+    L[0].data = 0;
+    L[0].next = -1;    //头结点
     for(int i = 1; i<MaxSize; i++){
-        *L[i].next = -2; 
+        L[i].data = 0;
+        L[i].next = -2; 
     }
 }
+SLinkList L;    //等效于SNode L[MaxSize]
 ```
 
 ---
@@ -307,32 +329,36 @@ void InitList(SNode &L){
 
         **概念**：元素只能由一个方向进出栈
 
+        **性质(卡特兰数)**：n个不同数进出栈的排列情况为：$\frac{C_{2n}^n}{1+n}=\frac{A_{2n}^n}{(n+1)!}$
+
 ### 顺序栈
 
-        定义
+        定义：使用受限的静态顺序表
 
 ```cpp
-#define MaxSize 10
-struct SqStack(){
+const int MaxSize = 10;
+struct SqStack{
     int data[MaxSize];
-    int top;    //记录栈顶元素下标
+    int top;    //栈顶元素下标
 };
 ```
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitStack(SqStack &S){
     S.top = -1;
 }
+SqStack = S;
+InitStack(S);
 ```
 
         入栈
 
 ```cpp
 bool Push(SqStack &S,int e){
-    if(S.top == MaxSize-1){return false;}
-    S.data[++top] = e;
+    if(S.top == MaxSize-1){return false;}    //判满
+    S.data[++S.top] = e;
     return true;
 }
 ```
@@ -341,8 +367,8 @@ bool Push(SqStack &S,int e){
 
 ```cpp
 bool Pop(SqStack &S,int &e){
-    if(S.top == -1){return false;}
-    e = S.data[top--];
+    if(S.top == -1){return false;}    //判空
+    e = S.data[S.top--];
     return true;
 }
 ```
@@ -351,22 +377,24 @@ bool Pop(SqStack &S,int &e){
 
 ### 链栈
 
-         定义
+         定义：使用受限的单链表
 
 ```cpp
-struct Node(){
+typedef struct Node{
     int data;
-    struct Node *next;
-}Node,*LinkStack;
+    Node *next;
+}*LinkStack;
 ```
 
-         初始化：头指针就时栈顶指针
+         实例化初始化：头结点的next即栈顶指针
 
 ```cpp
 void InitStack(LinkStack &S){
     S = new Node();
     S->next = NULL;
 }
+LinkStack S;
+InitStack(S);
 ```
 
         入栈：头插法
@@ -384,7 +412,7 @@ void Push(LinkStack &S,int e){
 
 ```cpp
 bool Pop(LinkStack &S,int &e){
-    if(S->next == NULL){return false;}
+    if(S->next == NULL){return false;}    //判空    
     Node *p = S->next;
     e = p->data;
     S->next = p->next;
@@ -397,32 +425,34 @@ bool Pop(LinkStack &S,int &e){
 
 ### 共享栈
 
-        **概念**：让两个栈共享一个一维数组。
+        **概念**：让两个栈共享一个一维静态数组。
 
         定义
 
 ```cpp
-#define MaxSize 10
-struct SqStack(){
+const int MaxSize = 10;
+struct SqStack{
     int data[MaxSize];
-    int top1;
-    int top2;
+    int top1;    //栈1顶部元素
+    int top2;    //栈2顶部元素
 };
 ```
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitStack(SqStack &S){
-    S.top1 = -1;    //也是判空条件
-    S.top2 = MaxSize;    //也是判空条件
+    S.top1 = -1;    //也是栈1判空条件
+    S.top2 = MaxSize;    //也是栈2判空条件
 }
+SqStack S;
+InitStack(S);
 ```
 
-        判满
+        判满条件
 
 ```cpp
-S.top1 = S.top2
+S.top1+1 == S.top2
 ```
 
 ---
@@ -443,9 +473,9 @@ S.top1 = S.top2
 
         计算机运行前/后缀表达式的计算效率要比中缀表达式高。
 
-        左优先原则： 用**手算法**把中缀表达式转后缀表达式的要点：按照**从左往右的顺序标出所有符号**的运算顺序，依运算顺序按上述格式书写。
+        左优先原则： 用**手算法**把中缀表达式转后缀表达式的要点：**计算机**是按照**从左往右的顺序标出所有符号**的运算顺序，依运算顺序按上述格式书写。
 
-        右优先原则： 用**手算法**把中缀表达式转后缀表达式的要点：按照**从右往左的顺序标出所有符号**的运算顺序，依运算顺序按上述格式书写。
+        右优先原则： 用**手算法**把中缀表达式转后缀表达式的要点：**计算机**是按照**从右往左的顺序标出所有符号**的运算顺序，依运算顺序按上述格式书写。
 
 ---
 
@@ -453,10 +483,10 @@ S.top1 = S.top2
 
 ### 顺序队列
 
-        定义
+        定义：使用受限的静态顺序表，使用效果是2指针单方向循环绕圈
 
 ```cpp
-#define MaxSize 10
+const int MaxSize = 10;
 struct SqQueue{
     int data[MaxSize];
     int front;
@@ -464,21 +494,23 @@ struct SqQueue{
 };
 ```
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitQueue(SqQueue &Q){
-    Q.front = 0;    //指向队头元素
+    Q.front = 0;    //指向队头元素、空时会指空
     Q.rear = 0;    //指向队尾后1个空元素
 }
+SqQueue Q;
+InitQueue(Q);
 ```
 
         入队：尾入
 
 ```cpp
 bool Push(SqQueue &Q,int e){
-    if((Q.rear+1)%MaxSize == Q.front){return false;}
-    Q.data[rear] = e;
+    if((Q.rear+1)%MaxSize == Q.front){return false;}  //判满
+    Q.data[Q.rear] = e;
     Q.rear = (Q.rear+1)%MaxSize;
     return true;
 }
@@ -488,8 +520,8 @@ bool Push(SqQueue &Q,int e){
 
 ```cpp
 bool Pop(SqQueue &Q,int &e){
-    if(Q.rear == Q.front){return false;}
-    e = Q.data[front];
+    if(Q.rear == Q.front){return false;}    //判空
+    e = Q.data[Q.front];
     Q.front = (Q.front+1)%MaxSize;
     return true;
 }
@@ -504,43 +536,45 @@ bool Pop(SqQueue &Q,int &e){
 ```cpp
 struct Node{
     int data;
-    struct Node *next;
+    Node *next;
 };
 struct LinkQueue{
-    struct Node *front,*rear;
-}
+    Node *front,*rear;
+};
 ```
 
-        初始化
+        实例化初始化
 
 ```cpp
 void InitQueue(LinkQueue &Q){
-    Q.front = new Node();
-    Q.rear = Q.front;
+    Q.front = new Node();    //队头指针恒定不变
+    Q.rear = Q.front;    //队尾指向尾部元素，和顺序表队列有区别
 }
+LinkQueue Q;
+InitQueue(Q);
 ```
 
-      入队：尾出
+      入队：尾入
 
 ```cpp
 void Push(LinkQueue &Q,int e){
-    Node *s = new Node()
+    Node *s = new Node();
     s->data = e;
     s->next = NULL;
     Q.rear->next = s;
-    s->next = NULL;
+    Q.rear = s;
 }
 ```
 
-        出队：头入
+        出队：头出
 
 ```cpp
-bool Pop(SqQueue &Q,int &e){
-    if(Q.rear == Q.front){return false;}
+bool Pop(LinkQueue &Q,int &e){
+    if(Q.rear == Q.front){return false;}    //判空
     Node *p = Q.front->next;
-    Q.front->next = p->next
-    if(Q.rear == p){
-        Q.rear = Q.front
+    Q.front->next = p->next;
+    if(Q.rear == p){    //最后一个出队时，手动使其满足置空条件
+        Q.rear = Q.front;
     }
     e = p->data;
     delete p;
@@ -552,12 +586,9 @@ bool Pop(SqQueue &Q,int &e){
 
 ### 双端队列
 
-        **概念**：两端都可以入队、出队。
++ **双端队列**：两端都可以入队、出队。
 
-        **卡特兰数**：n个不同数进出双端队列的排列情况为：$1\div(1+n) × C_{2n}^n$
-
-- **输出受限双端队列**：入队只能一端
-
++ **输出受限双端队列**：入队只能一端
 - **输入受限双端队列**：出队只能一端
 
 ---
@@ -590,8 +621,8 @@ bool Pop(SqQueue &Q,int &e){
 #include <string>
 int BruteForce(string S,string T){
     int k=0;    //比较位置
-    int i=k;    //被比较子串下标
-    int j=0;    //比较子串下标
+    int i=k;    //被比较长串S的子串下标
+    int j=0;    //比较串T下标
     while(k <= S.length()-T.length() && j < T.length(){
         if(S[i] == T[j]){
             i++;
@@ -644,7 +675,7 @@ int* GetNextArray(string T){
 }
 int KMP(string S,string T){
     int *next = GetNextArray(T);
-    int i=0;    //被比较子串下标.优化点：i不用回溯
+    int i=0;    //被比较长串S的子串下标.优化点：i不用回溯，少k指针
     int j=0;    //比较子串下标
     while( i < S.length() && j < T.length()){
         if(S[i] == T[j]){
@@ -666,11 +697,18 @@ int KMP(string S,string T){
 }
 ```
 
+| next数组 | 含义                                               |
+|:------:|:------------------------------------------------:|
+| 下标i    | 第i个比较不一样，前面i-1个一样                                |
+| 值a     | 前面i-1个哪里开始最合适，有a个一样的，因而比较串指针挪到位置a处进行比较（a越小比得就越快） |
+
++ 优化时：第i个比较不一样的字母与挪到位置a所在的字母一样时，可以优化成它的a值（注意只能从前往后进行优化）
+
 ---
 
 ## 树
 
-        **概念**：每个结点拥有0-1父结点，1-n孩子结点。
+        **概念**：每个结点拥有0-1父结点，0-n孩子结点。
 
 | 分类依据 | 类别        |
 |:----:|:---------:|
@@ -678,13 +716,14 @@ int KMP(string S,string T){
 | 有无序  | 有序树、无序树   |
 | 最多叉数 | 二叉树、m叉树   |
 
-| 术语                | 解释                        |
-|:-----------------:|:-------------------------:|
-| 路径方向              | 从上到下                      |
-| 路径长度              | 经过的边数                     |
-| 层、深度、高度           | 树的行数                      |
-| 度、结点的度、树的度$n$     | 边、连向孩子的边数、树的总边数           |
-| $n_0$/$n_1$/$n_2$ | 结点度为0/1/2的结点个数，$n_0$即叶子结点 |
+| 术语                    | 解释                        |
+|:---------------------:|:-------------------------:|
+| 路径方向                  | 从上到下                      |
+| 路径长度                  | 经过的边数                     |
+| 层、深度、高度               | 树的行数                      |
+| 度、结点的度、树的度            | 边、连向孩子的边数、树的总边数           |
+| 结点总数$n$               | 树的结点总数                    |
+| 结点总数$n_0$/$n_1$/$n_2$ | 度为0/1/2的结点总数，$n_0$即叶子结点总数 |
 
 ---
 
@@ -694,11 +733,7 @@ int KMP(string S,string T){
 
         **性质**：$n_0 = n_2+1$ ，推论 $n_0 + n_2$ 为奇数。
 
-        推导： 往上视角下：$n = n_0+n_1+n_2-1$①
-
-                     往下视角下：$n=n_1+2n_2$②
-
-                     ②-①得： $n_0 = n_2+1$
+        推导：$树总边数=n_0+n_1+n_2-1(往上)=n_1+2n_2(往下)$，基于边和结点的关系。
 
 ---
 
@@ -714,11 +749,17 @@ int KMP(string S,string T){
 
         **性质1**：满二叉树、完全二叉树存储在一维数组，即顺序存储时，若某父结点下标为`i`，则其左孩子下标为`2i+1`，右孩子下标为`2i+2`。
 
-        **性质2**：满二叉树、完全二叉树存储在一维数组，即顺序存储时，最后一个父结点的下标为`floor(n/2)-1`。
+        **性质2**：满二叉树、完全二叉树存储在一维数组，即顺序存储时，最后一个父结点的下标为`ceil(n/2)-1`。
 
-        **性质3**：满二叉树的$n$为奇数。
+        **性质3**：满二叉树的结点总数为奇数。
 
-        **性质4**：平衡二叉树最少结点数$n_h = n_{h-1} + n_{h-2} +1$，比**斐波那契数列**多加1
+        **性质4**：平衡二叉树最少结点数$n_h = n_{h-1} + n_{h-2} +1$，比**斐波那契数列**算法多加1
+
++ 斐波那契数列：1 1 2 3 5 8
+
++ 平衡二叉树最少结点：1 2 4 7 12 20
+
+---
 
         **排序树，且平衡二叉树，其插入调整方法**：找到最小的不平衡子树
 
@@ -731,7 +772,7 @@ int KMP(string S,string T){
 
 注：LL指从最小不平衡子树的根结点出发，深度大的一边的首2次走向。
 
-        大：子结点为旋对象，小：孙结点为旋对象。
+        大：上述走向子结点为旋对象，小：上述走向孙结点为旋对象。
 
         左旋：把左孩子给父亲，自己当左孩子的爷爷。
 
@@ -746,13 +787,15 @@ int KMP(string S,string T){
         链式存储：
 
 ```cpp
-struct TNode{    //指向树的总根结点的指针代表整颗二叉树
+typedef struct TNode{    //每个结点
     int data;
-    struct TNode *Lchild,*rchild;
-};
+    TNode *lchild,*rchild;
+}*Tree;    //指向根结点的指针代表整颗二叉树
 ```
 
-        树的遍历
+---
+
+        **树的遍历**
 
 | 遍历方式 | 法则   | 性质                       | 对应表达式 | 孩子兄弟表示法中对应树的 |
 |:----:|:----:|:------------------------:|:-----:|:------------:|
@@ -762,21 +805,21 @@ struct TNode{    //指向树的总根结点的指针代表整颗二叉树
 | 层序遍历 | 从上往下 | \                        | \     | \            |
 
 ```cpp
-void BeforeVisit(TNode *T){    //先序遍历
+void BeforeVisit(Tree T){    //先序遍历
     if(T != NULL){
         print(T->data);
         BeforeVisit(T->lchild);
         BeforeVisit(T->rchild);
     }
 }
-void BetweenVisit(TNode *T){    //中序遍历
+void BetweenVisit(Tree T){    //中序遍历
     if(T != NULL){
-        MiddleVisit(T->lchild);
+        BetweenVisit(T->lchild);
         print(T->data);
-        MiddleVisit(T->rchild);
+        BetweenVisit(T->rchild);
     }
 }
-void AfterVisit(TNode *T){    //后续遍历
+void AfterVisit(Tree T){    //后续遍历
     if(T != NULL){
         AfterVisit(T->lchild);
         AfterVisit(T->rchild);
@@ -791,57 +834,59 @@ void LevelVisit(Tree T){    //层序遍历
     while(!Empty(Q)){
         Pop(Q,s);
         print(s->data);
-        if(s->lchid!=NULL){Push(Q,(s->lchild);}
-        if(o->rchild!=NULL){Push(Q,(s->rchild));}
+        if(s->lchild!=NULL){Push(Q,s->lchild);}
+        if(s->rchild!=NULL){Push(Q,s->rchild);}
     }
 }
-int GetDepth(BiTNode *p){    //求树深
-    if(p==NULL){
+int GetDepth(Tree T){    //求树深
+    if(T==NULL){
         return 0;
     }else{
-        int l = GetDepth(p->lchild);
-        int r = GetDepth(p->rchild);
+        int l = GetDepth(T->lchild);
+        int r = GetDepth(T->rchild);
         return l>r ? l+1 : r+1;
     }
 }
 ```
 
-        线索化：利用空闲指针，提高前驱后继的查找效率，可实现无递归遍历。
+---
 
-| 线索化方式 | 注意事项  | 找前驱        | 找后继        |
-|:-----:|:-----:|:----------:|:----------:|
-| 先序线索化 | 死循环问题 | 代码无法往上     | 有右孩子，则先左后右 |
-| 中序线索化 | \     | 有左孩子，则最右下  | 有右孩子，则最左下  |
-| 后序线索化 | \     | 有左孩子，则先右后左 | 代码无法往上     |
+        **线索化**：利用空闲指针，提高前驱后继的查找效率，实现无遍历查找。
+
+| 线索化的使用 | 找前驱            | 找后继            |
+|:------:|:--------------:|:--------------:|
+| 先序线索使用 | 代码无法往上找父结点     | 有右孩子，则先左孩子后右孩子 |
+| 中序线索使用 | 有左孩子，则左孩子最右下   | 有右孩子，则右孩子最左下   |
+| 后序线索使用 | 有左孩子，则先右孩子后左孩子 | 代码无法往上找父结点     |
 
 ```cpp
-struct TNode{
+typedef struct TNode{
     int data;
-    struct TNode *lchild,*rchild;
+    TNode *lchild,*rchild;
     bool ltag,rtag;    //需增多存储空间辨别有无线索化，不完全是利用空闲指针
-};
+}*Tree;
 TNode *pre=NULL;
-void Sign(TNode *T){
-    if(T->lchild == NULL){    //用当前的标记前驱
+void Sign(Tree T){
+    if(T->lchild == NULL){    //用指针T线索化前驱链接指针pre
         T->lchild = pre;
         T->ltag = true;
     }
-    if(pre!=NULL && pre->rchild ==NULL){    //用之前的标记后继
+    if(pre!=NULL && pre->rchild ==NULL){    //用指针pre线索化后驱链接指针T
         pre->rchild = T;
         pre->rtag = true;
     }
-    pre = p;
+    pre = T;
 }
-void BeforeSign(TNode *T){    //先序线索化
+void BeforeSign(Tree T){    //先序线索化
     if(T != NULL){
         Sign(T);
-        if(!p->ltag){}    //先序线索化死循环问题，上行可能刚标记左孩子为前驱
+        if(!T->ltag){    //死循环问题，上行刚线索化左孩子的前驱是父结点
             BeforeSign(T->lchild);
         }
         BeforeSign(T->rchild);
     }
 }
-void BetweenSign(TNode *T){    //中序线索化
+void BetweenSign(Tree T){    //中序线索化
     if(T != NULL){
         BetweenSign(T->lchild);
         Sign(T);
@@ -849,7 +894,7 @@ void BetweenSign(TNode *T){    //中序线索化
     }
 }
 
-void AfterSign(TNode *T){    //后续线索化
+void AfterSign(Tree T){    //后续线索化
     if(T != NULL){
         AfterSign(T->lchild);
         AfterSign(T->rchild);
@@ -862,38 +907,39 @@ void AfterSign(TNode *T){    //后续线索化
 
 ### 树的存储结构
 
-        双亲表示法
+        双亲表示法(父母亲表示法)；
 
 ```cpp
-#define MaxSize 10
+const int MaxSize = 10;
 struct TNode{
     int data;
     int parent;
 };
 struct Tree{
-    struct TNode node[MaxSize];
+    TNode node[MaxSize];    //静态二维顺序表，遍历时直接读表
     int NodeNum;
 };
 ```
 
-        孩子表示法
+        孩子表示法：
 
 ```cpp
+const int MaxSize = 10;
 struct CNode{
-    int child;
-    struct CNode *next;
+    int data;
+    CNode *next;
 };
 struct TNode{
     int data;
-    struct CNode *first;    //孩子链
+    CNode *first;    //孩子链
 };
 struct Tree{
-    struct TNode node[MaxSize];
+    TNode node[MaxSize];    //静态二维顺序表，遍历时直接读表
     int nodeNum;
 };
 ```
 
-        孩子兄弟表示法：转成二叉树了
+        孩子兄弟表示法：左孩子右兄弟，转成二叉树了
 
 ```cpp
 struct TNode{
@@ -933,100 +979,108 @@ struct TNode{
 | 边是否有值  | 带权图、非带权图      |
 | 边的相对数量 | 完全图、稀疏图、稠密图   |
 
-+ 任何情况下都连通，即变动任意边都连通，$n$个顶点需要$n-1$个顶点强连通，再接入最后一个顶点，既需要边数为：$ (n-2+n-3+...+1)+1 $
++ **完全图**：完全连通，边数固定$=n(n-1)/2$
++ **强连通**：变动任意边数都连通，边数最少$=(n-1)(n-2)/2+1$，（即n个顶点需要n-1个顶点完全连通，再连入最后一个顶点）
++ **强连通分量**：极大强连通子图
 
 ---
 
 ### 图的存储结构
 
-| 类别    | 适用于 | 性质                                                          |
-|:-----:|:---:|:-----------------------------------------------------------:|
-| 邻接矩阵法 | 稠密图 | 将度矩阵转化为有1无0(自己到自己为0)的矩阵$A$，$A^n$代表从结点$i$到结点$j$的长度为$n$的路径数目。 |
-| 邻接链表法 | 均可  | 表示不唯一，找拓扑排序是时间复杂度T(v+e)                                     |
-| 十字链表法 | 均可  | 表示不唯一                                                       |
-| 邻接多重表 | 无向图 | 表示不唯一                                                       |
+| 类别    | 适用于 | 性质                                                                |
+|:-----:|:---:|:-----------------------------------------------------------------:|
+| 邻接矩阵法 | 稠密图 | 将度矩阵转化为有1无0(自己到自己为0)的矩阵$A$，$A^n$矩阵运算结果代表从结点$i$到结点$j$的长度为$n$的路径数目。 |
+| 邻接链表法 | 均可  | 表示不唯一，找拓扑排序是时间复杂度T(v+e)                                           |
+| 十字链表法 | 均可  | 表示不唯一                                                             |
+| 邻接多重表 | 无向图 | 表示不唯一                                                             |
 
-        邻接矩阵法
+        邻接矩阵法：结点表，邻接出度表(有无都记录)
 
 ```cpp
-#define MaxSize 10;
+const int MaxSize = 10;
 struct GNode{
     int data;
-    int outEdge[MaxSize];    //记录是否有出度，及每个出度权值
+    int outEdge[MaxSize];    //该边到所有其他边的出度有无、及权值
 };
 struct Graph{
-    struct GNode node[MaxSize]
+    GNode node[MaxSize];    //结点表，静态二维顺序表
     int edgeNum;
     int nodeNum;
 };
 //或以下
-int data[MaxSize];
-int Edge[MaxSize][Maxsize];
-```
-
-         邻接链表法
-
-```cpp
-struct Edge{
-    int data;
-    int toNode;
-    struct Edge *next;
-};
-struct GNode{
-    int data;
-    struct Edge *first;    //出度链表
-};
 struct Graph{
-    struct GNode node[MaxSize];
+    int data[MaxSize];
+    int Edge[MaxSize][MaxSize];
     int edgeNum;
     int nodeNum;
 };
 ```
 
-        十字链表法
+         邻接链表法：结点表，邻接出度链表(只包含有的)
+
+```cpp
+struct outEdge{
+    int data;
+    int toNode;    //记结点表下标即可
+    outEdge *next;
+};
+struct GNode{
+    int data;
+    outEdge *first;    //出度链表
+};
+struct Graph{
+    GNode node[MaxSize];    //结点表，静态二维顺序表
+    int edgeNum;
+    int nodeNum;
+};
+```
+
+        十字链表法：结点表，十字链接出度链表(只包含有的)和入度链表(只包含有的)
 
 ```cpp
 struct Edge{
     int data;
     int fromNode;    //说明是fromNode的出度
-    int toNode;    //说明是toNode的入
-    struct Edge *sameFromNextTo;
-    struct Edge *sameToNextFrom;
+    int toNode;    //说明是toNode的入度
+    Edge *sameFrom_NextTo;
+    Edge *sameTo_NextFrom;
 };
 struct GNode{
     int data;
-    struct Edge *firstOut;    //出度链表
-    struct Edge *firstIn;    //入度链表
+    Edge *firstOut;    //出度链表
+    Edge *firstIn;    //入度链表
 };
 struct Graph{
-    struct GNode node[MaxSize];
+    GNode node[MaxSize];    //结点表，静态三维顺序表
     int edgeNum;
     int nodeNum;
 };
 ```
 
-        邻接多重表
+        邻接多重表：结点表，邻接相关边的链表(只包含有的)，相关边无方向之说，可多重多次使用
 
 ```cpp
 struct Edge{
     int data;
     int node1;
     int node2;
-    struct Edge *sameNode2NextNode1;
-    struct Edge *sameNode1NextNode2;
+    struct Edge *sameNode2_NextNode1;
+    struct Edge *sameNode1_NextNode2;
 };
 struct GNode{
     int data;
-    struct Edge *first;    //相关边
+    Edge *first;    //相关边链表
 };
 struct Graph{
-    struct GNode node[MaxSize];
+    GNode node[MaxSize];    //结点表，静态二维顺序表
     int edgeNum;
     int nodeNum;
 };
 ```
 
-        树的遍历
+---
+
+        **图的遍历**
 
 | 类别        | 实现         | 性质              |
 |:---------:|:----------:|:---------------:|
@@ -1111,12 +1165,12 @@ for(int k = 0; k < Maxsize; k++){    //中转点
 
 ## 查找
 
-| 算法   | 适用于     | 平均查找长度ASL |
-|:----:|:-------:|:---------:|
-| 顺序查找 | 无序、有序数组 | $n/2$     |
-| 二分查找 | 有序数组    | $logn$    |
-| 分块查找 | B树、B+树  | \         |
-| 散列查找 | 散列表     | 接近1       |
+| 算法   | 适用于    | 平均查找长度ASL |
+|:----:|:------:|:---------:|
+| 顺序查找 | \      | $n/2$     |
+| 二分查找 | 有序数组   | $logn$    |
+| 分块查找 | B树、B+树 | \         |
+| 散列查找 | 散列表    | 接近1       |
 
 ---
 
@@ -1126,7 +1180,7 @@ for(int k = 0; k < Maxsize; k++){    //中转点
 |:------------------------------------:|
 | 绝对平衡树、排序树                            |
 | 结点至多`m`叉时，各非根结点**分叉数**至少`floor(m/2)` |
-| 关键字在结点的两个分叉间，数量为分叉数-1                |
+| 各结点中，关键字 = 分叉数－1                     |
 
         **性质1**：n个关键字必有n＋1个叶子结点，叶子结点即失败结点。
 
@@ -1151,7 +1205,7 @@ for(int k = 0; k < Maxsize; k++){    //中转点
 | 叶子结点数   | n个关键字有n个叶子结点 | n个关键字有n＋1个叶子结点 |
 | 关键字与分叉数 | 关键字 = 分叉数    | 关键字 = 分叉数－1    |
 | 叶子结点存放  | 关键字          | 失败结点           |
-| 非叶子结点存放 | 关键字索引        | 关键字            |
+| 非叶子结点存放 | 关键字索引复制      | 关键字            |
 | 支持顺序查找  | 支持、叶子结点间指针相连 | 不支持            |
 
 ---
@@ -1165,7 +1219,7 @@ for(int k = 0; k < Maxsize; k++){    //中转点
 | 除留余数法 | 短数据     | \    | 全部         | 质数    |
 | 直接定址法 | 短数据、连续数 | \    | 全部         | 容量n   |
 | 数字分析法 | 长数据     | 手机号码 | 随机且分布均匀的几位 | 几位容量n |
-| 平凡取中法 | 长数据     | 身份证  | 数据平方后取中间几位 | 几位容量n |
+| 平方取中法 | 长数据     | 身份证  | 数据平方后取中间几位 | 几位容量n |
 
         重复冲突位置处理：
 
@@ -1180,7 +1234,7 @@ for(int k = 0; k < Maxsize; k++){    //中转点
 | 偏移方法  | 冲突偏移取值               | 性质           |
 |:-----:|:--------------------:|:------------:|
 | 线性探测法 | $0、1、2、3...$         | 比较密集，相对容易堆积  |
-| 平凡探测法 | $0^2、1^2、2^2、3^2...$ | 稀疏均匀，相对不容易堆积 |
+| 平方探测法 | $0^2、1^2、2^2、3^2...$ | 稀疏均匀，相对不容易堆积 |
 | 随机探测法 | 随机取                  | 查找麻烦         |
 
         **平均失败ASL**：每个模结果偏移到空的查找次数 / 总模结果
