--- a/pages/C03操作系统.md
+++ b/pages/C03操作系统.md
@@ -1,6 +1,6 @@
 <h1 align="center">操作系统</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-12-10</div>
 
 ## 操作系统特征与发展
 
@@ -217,6 +217,8 @@
 | **等待时间**     | $周转时间-CPU执行时间-I/O操作时间$ |
 | 响应时间         | $用户提交请求到收到响应的时间$       |
 
++ I/O操作时间也算CPU执行时间的可能原因：采用程序查询时，IO操作是占用CPU的
+
 | 调度算法       | 系统  | 饥饿  | 选择/说明                       | 评价     |
 |:----------:|:---:|:---:|:---------------------------:|:------:|
 | 先来先服务FCFS  | 批处理 | 不会  | 先来的                         | 有利于长作业 |
@@ -226,6 +228,7 @@
 | 优先级调度算法    | 交互  | 会   | 优先级数高的，优先级数可以是变动的           | \      |
 | 多级反馈队列算法   | 交互  | 会   | 多条时间片队列，队列优先级从高到低，时间片大小从小到大 | \      |
 
++ 区别：HRRN实时带权=周转时间/等待CPU时间，作业带权周转=周转时间/CPU执行时间
 + 优先级设计：系统进程>用户进程，前台>后台，I/O繁忙型进程>计算型进程
 
 ---
@@ -248,17 +251,17 @@
 | 有限等待    | 不能无限等下去           |
 | 让权等待    | 等待时不占用CPU，让出来的人唤醒 |
 
-| 实现方式             | 实现   | 内容                                | 违背原则           |
-|:----------------:|:----:|:---------------------------------:|:--------------:|
-| 单标志检查法           | 软件   | 进入只循环检查被转交，退出转交                   | 空闲让进、让权等待      |
-| 双标志检查法           | 软件   | 先循环检查，后声明                         | 忙则等待、让权等待      |
-| 双标志后检查法          | 软件   | 先声明，后循环检查                         | 空闲让进、有限等待、让权等待 |
-| peterson算法       | 软件   | 先声明、选择让、后循环检查                     | 让权等待           |
-| 中断屏蔽法            | 硬件   | \                                 | 不适合多核CPU       |
-| TestAndSet、TSL指令 | 硬件   | 封装（先循环检查、后声明）                     | 让权等待           |
-| Swap指令           | 硬件   | 封装（自己的false去循环交换资源的true）          | 让权等待           |
-| 整型信号量法           | 软件原语 | 封装P（先声明信号--，后循环检查）,封装V（信号++）      | 让权等待           |
-| 记录型信号量法          | 软件原语 | 封装P（先声明信号--，后检查阻塞）,封装V（信号++，唤醒阻塞） | \              |
+| 实现方式             | 实现   | 内容                                  | 违背原则           |
+|:----------------:|:----:|:-----------------------------------:|:--------------:|
+| 单标志检查法           | 软件   | 进入只循环检查被转交，退出转交                     | 空闲让进、让权等待      |
+| 双标志检查法           | 软件   | 先循环检查T，后声明S                         | 忙则等待、让权等待      |
+| 双标志后检查法          | 软件   | 先声明S，后循环检查T                         | 空闲让进、有限等待、让权等待 |
+| peterson算法       | 软件   | 先声明S、选择让、后循环检查T(被让&被让声明)            | 让权等待           |
+| 中断屏蔽法            | 硬件   | \                                   | 不适合多核CPU       |
+| TestAndSet、TSL指令 | 硬件   | 封装（先循环检查T、后声明S）                     | 让权等待           |
+| Swap指令           | 硬件   | 封装（自己的true去循环交换唯一资源false）           | 让权等待           |
+| 整型信号量法           | 软件原语 | 封装P（先声明信号--S，后循环检查T）,封装V（信号++）      | 让权等待           |
+| 记录型信号量法          | 软件原语 | 封装P（先声明信号--S，后检查阻塞T）,封装V（信号++，唤醒阻塞） | \              |
 
 注：PV操作中，P()又叫wait()，V()又叫sign()。
 
@@ -270,18 +273,18 @@
 
         **实现**：也是使用PV操作。
 
-|      | PV区别              | 概念区别         |
-|:----:|:-----------------:|:------------:|
-| 进程同步 | 成对的P()，V()是在不同进程中 | 按先后顺序执行      |
-| 进程互斥 | 成对的P()，V()是在同一进程中 | 不能同时进入同一个临界区 |
+|      | PV区别                  | 概念区别         |
+|:----:|:---------------------:|:------------:|
+| 进程同步 | 成对的P()，V()是在**不同进程**中 | 按先后顺序执行      |
+| 进程互斥 | 成对的P()，V()是在**同一进程**中 | 不能同时进入同一个临界区 |
 
-| PV例题集       | 互斥                                                                       | 同步                                                  |
-|:-----------:|:------------------------------------------------------------------------:|:---------------------------------------------------:|
-| 生产者消费者一对一问题 | 储物空间                                                                     | 消费者P(物)V(空)、生产者P(空)V(物)                             |
-| 生产者消费者多对多问题 | 储物空间                                                                     | 消费者P(物1)V(空)、消费者P(物2)V(空)、生产者P(空)V(物1)、生产者P(空)V(物2) |
-| 生产者消费者一对多问题 | 储物空间                                                                     | 消费者P(物1)V(空)、消费者P(物2)V(空)、生产者P(空)V(物1/物2)           |
-| 写者读者问题      | ①读写空间【读者计数，第一个P()、最后一个V()】，②计数变量，③(产生写饥饿)，写优先，进入区互斥检查，读者进入后马上V，而读者要退出后才V | /                                                   |
-| 哲学家进餐问题     | ①筷子空间，②最多支持n-1人同时进入筷子申请                                                  | /                                                   |
+| PV例题集       | 互斥                                                                         | 同步                                                  |
+|:-----------:|:--------------------------------------------------------------------------:|:---------------------------------------------------:|
+| 生产者消费者一对一问题 | 储物空间                                                                       | 消费者P(物)V(空)、生产者P(空)V(物)                             |
+| 生产者消费者多对多问题 | 储物空间                                                                       | 消费者P(物1)V(空)、消费者P(物2)V(空)、生产者P(空)V(物1)、生产者P(空)V(物2) |
+| 生产者消费者一对多问题 | 储物空间                                                                       | 消费者P(物1)V(空)、消费者P(物2)V(空)、生产者P(空)V(物1/物2)           |
+| 写者读者问题      | ①读写空间【读者计数，第一个P()、最后一个V()】，②计数变量，③(产生写饥饿)，写优先，设置互斥检查区，读者检查后马上V，而写者要检查和读写才V | /                                                   |
+| 哲学家进餐问题     | ①筷子空间，②最多支持n-1人同时进入筷子申请                                                    | /                                                   |
 
 + 格式：while(TRUE){代码段}
 
@@ -529,11 +532,11 @@
 | 可变分配全局置换 | 主动将空闲未分配的全局内存块纳入增加驻留集，以置换  |
 | 可变分配局部置换 | 只能在自己的驻留集换，由操作系统对驻留集进行动态调整 |
 
-|        | 操作系统调整驻留集的参靠指标                 |
-|:------:|:------------------------------:|
-| 工作集    | 某段时间内（窗口），进程实际访问的页面集合个数（集合要去重） |
-| 颠簸（抖动） | 刚调出的又调入，刚调入的又调出。               |
-| 缺页率    | 访存时的缺页占比                       |
+|        | 操作系统调整驻留集的参靠指标                     |
+|:------:|:----------------------------------:|
+| 工作集    | 某段时间内（窗口），进程实际访问的页面集合个数（**集合要去重**） |
+| 颠簸（抖动） | 刚调出的又调入，刚调入的又调出。                   |
+| 缺页率    | 访存时的缺页占比                           |
 
 ---
 
@@ -553,22 +556,22 @@
 
         **概念**：操作系统调入时发现内存空间不够，需要换出部分页面。
 
-| 置换算法         | 内容                                                                |
-|:------------:|:-----------------------------------------------------------------:|
-| 最佳置换OPT      | 无法实现，选择以后永不被使用，或在最长时间不被使用的置换                                      |
-| 先进先出FIFO     | 先进先出，Belady异常，驻留集增大时，缺页率不减反增                                      |
-| 最近最少使用LRU    | 局部统计法，统计最近一段时间的访问次数，替换最少访问的出去，算法位要求大，同时需要排序。                      |
-| 时钟置换CLOCK    | 1算法位，刚放入和访问置1，替换时从上次地方继续，找完一轮从头再开始（像时钟一样），①找0的并且**置1为0**。**最多2轮** |
-| 改进型时钟置换CLOCK | 改进要考虑脏位，①找0的未修改的，②找0的修改的并且**置1为0**，③找0的未修改的，④找0的修改的。**最多4轮**      |
+| 置换算法         | 内容                                                                                                    |
+|:------------:|:-----------------------------------------------------------------------------------------------------:|
+| 最佳置换OPT      | 无法实现，选择以后永不被使用，或在最长时间不被使用的置换                                                                          |
+| 先进先出FIFO     | 先进先出，Belady异常，驻留集增大时，缺页率不减反增                                                                          |
+| 最近最少使用LRU    | 局部统计法，统计最近一段时间的访问次数，替换最少访问的出去，算法位要求大，同时需要排序。                                                          |
+| 时钟置换CLOCK    | 1算法位(刚放入和访问置1)，从上次地方继续找，找完一轮从头开始(像时钟一样旋转)，①找算法0的，且**置算法1为0**。<br>（巧记：$\underline0-0$，**最多2轮**）        |
+| 改进型时钟置换CLOCK | 1算法位1脏位，①找算法0未修改0；②找算法0已修改1，且**置算法1为0**；③找算法0未修改0；④找算法0已修改1。<br>（巧记：$00-\underline01-00-01$，**最多4轮**） |
 
 ---
 
 ## 文件管理
 
-| 文件属性    | 说明                      |
-|:-------:|:-----------------------:|
-| 可见文件属性  | 文件名、文件类型、位置、大小、创建者、权限信息 |
-| 不可见文件属性 | 标识符、地址                  |
+| 文件属性    | 说明                        |
+|:-------:|:-------------------------:|
+| 可见文件属性  | 文件名、文件类型、路径位置、大小、创建者、权限信息 |
+| 不可见文件属性 | 标识符、内外存地址                 |
 
 | 文件结构     | 说明        |
 |:--------:|:---------:|
@@ -608,7 +611,7 @@
 | 位示图法  | 用矩阵记录  | 占用空间恒定            |
 | 成组链接法 | 超级块    | 空闲越少占用越少，空闲越大占用越大 |
 
-+ **超级块**：占用一个物理块，记录信息：**地址个数、地址**，首地址是下个超级块。末尾超级块首地址用特殊值置空，非首地址是一个个的空闲物理块。
++ **超级块**：占用一个物理块，记录信息：**空闲地址个数、地址/指针**，首地址是下个超级块。末尾超级块首地址用特殊值置空，非首地址是一个个的空闲物理块。
 
 <img src="./images/2023-07-23-11-15-42-image.png">
 
@@ -649,18 +652,18 @@ $总用时=启动(延迟)时间+寻道(移动)时间+寻区(旋转)时间+传输
 |:------------:|:---------------------:|:---------:|
 | 先来先服务算法FCFS  | 先来先服务                 | 唯一不产生磁臂黏着 |
 | 最短寻找时间优先SSTF | 最近磁道优先                | 会饥饿       |
-| 扫描算法SCAN     | 移动到道边，换方向，共两个方向       | \         |
-| LOOK调度算法     | 优化扫描，观察到道边是否还有，提起换向   | \         |
-| 循环扫描算法CSCAN  | 移动到道边，从头再来，只有一个方向     | \         |
-| C-LOOK调度算法   | 优化扫描，观察到道边是否还有，提起从头再来 | \         |
+| 扫描算法SCAN     | 移动到道边，换方向，共2方向(来回)    | \         |
+| LOOK调度算法     | 优化扫描，观察到道边是否还有，提前换向   | \         |
+| 循环扫描算法CSCAN  | 移动到道边，从头再来，共1方向(循环)   | \         |
+| C-LOOK调度算法   | 优化扫描，观察到道边是否还有，提前从头再来 | \         |
 
-+ 只有一个方向的CSCAN不仅能更加**契合按序读取**，同时使每个磁道被访问的**时间间隔相同**。
++ 只有1个方向的CSCAN不仅能更加**契合按序读取**，同时使每个磁道被访问的**时间间隔相同**。
 
-| 减少延迟方法          | 说明               |
-|:---------------:|:----------------:|
-| 交替编号            | 逻辑相邻的扇区在物理上间隔、原因 |
-| 驻面号\|磁盘号\|扇区号编号 | 顺序读取时，减少磁头移动次数   |
-| 错位命名            | 同张盘面的逻辑编号也要错开、原因 |
+| 减少延迟方法          | 说明                  |
+|:---------------:|:-------------------:|
+| 交替编号            | 逻辑相邻的扇区在物理上间隔、原因    |
+| 驻面号\|磁盘号\|扇区号编号 | 顺序读取时，减少磁头移动次数      |
+| 错位命名            | 同张盘正反两面的逻辑编号也要错开、原因 |
 
 + **原因**：在读取完一个扇区后，准备读下一个扇区的时候，如果处于相邻的下一个扇区位置，或另一盘面的相邻的下一个扇区位置，可能因上一个扇区的寄存器数据还来不及取走，暂时不能读，当寄存器取走后可读时，已经转过了起始位置，要再旋转一圈后才能再读。
 
