--- a/pages/C04计算机网络.md
+++ b/pages/C04计算机网络.md
@@ -1,6 +1,6 @@
 <h1 align="center">计算机网络</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-12-10</div>
 
 ## 计算机网络概念
 
@@ -54,7 +54,7 @@
 | 传输层          | 进程间的数据传输        | UDP、TCP                                                              | \       | 端口→端口，使用端口号   | 报文段  |
 | 网络层          | 主机间数据分组和路由转发    | ARP、IPV4、IPV6、ICMP、OSPF                                              | 路由器     | 主机→主机，使用IP地址  | 数据报  |
 | 数据链路层        | 把网络层传下来的数据报组装成帧 | GBN、SR、WDMA、FDMA、TDMA、CDMA、ALOHA、CSMA-CD/CA、Ethernet、802.11、PPP、HDLC | 交换机、网桥  | 设备→设备，使用MAC地址 | 帧    |
-| 物理层          | 比特传输            | RJ45                                                                 | 中继器、集线器 | /             | 比特   |
+| 物理层          | 比特传输            | RJ45                                                                 | 中继器、集线器 | 设备→设备，无地址     | 比特   |
 
 | 协议三要素  | 说明             |
 |:------:|:--------------:|
@@ -87,19 +87,21 @@
 | 码元    | 固定时长的信号波形（不一定是平的），固定时长为码元宽度         |
 | K进制码元 | 一个码元可以有K种不同信号表示方式                   |
 
-| 性能指标              | 内容                      |
-|:-----------------:|:-----------------------:|
-| 带宽                | 某网络设备所支持的最高传输速率，单位bit/s |
-| 比特率               | 信息传输速率，单位bit/s          |
-| 波特率、码元传输速率        | 码元传输速率，单位baud           |
-| 发送时延、传输时延         | $数据长度÷信道带宽$             |
-| 传播时延              | $信道长度÷传播速率$             |
-| 排队时延              | 进出路由器、末端设备的时间           |
-| 处理时延              | 路由器、末端设备的处理时间           |
-| 时延带宽积             | $传播时延×信道带宽$             |
-| 往返时延RTT、ping、发送周期 | $传播时延×2＋末端处理时间$         |
-| 信道利用率             | $有数据通过时间÷发送周期$          |
-| 网络利用率             | 信道利用率的加权平均              |
+| 性能指标                  | 内容                       |
+|:---------------------:|:------------------------:|
+| 波特率、码元传输速率            | 单位baud                   |
+| 比特率、信息传输速率            | =$\log_2K$×波特率，单位bit/s   |
+| 有效信息传输速率              | =比特率×有效信息率，单位bit/s       |
+| 带宽                    | 网络设备支持的最高传输速率，单位bit/s    |
+| 信道带宽                  | 网络发送设备支持的最高传输（**=发送**）速率 |
+| **发送时延**、**传输时延**     | =数据长度÷**信道带宽**           |
+| 传播时延                  | =信道长度÷**传播速率**           |
+| 排队时延                  | 进出路由器、末端设备的时间（较少出现）      |
+| 处理时延                  | 路由器（较少出现）、末端设备的处理时间      |
+| 时延带宽积                 | =传播时延×**信道带宽**           |
+| 往返时延RTT、ping、**发送周期** | =传播时延×2＋末端处理时间           |
+| 信道利用率                 | =有数据通过时间÷发送周期            |
+| 网络利用率                 | 信道利用率的加权平均               |
 
 ---
 
@@ -126,9 +128,9 @@
 
                 **信道极限波特率（Baud）**：$2W$
 
-                **信道极限比特率（b/s）**：$2W×log_2n$，
+                **信道极限比特率（b/s）**：$2W×\log_2K$，
 
-                $W$：信道带宽Hz，$n$：码元进制数
+                $W$：信道带宽Hz，$K$：码元进制数
 
 ---
 
@@ -279,25 +281,25 @@
 
 ### 介质访问控制
 
-| 介质访问控制方式   | 类别    | 说明                                                            |
-|:----------:|:-----:|:-------------------------------------------------------------:|
-| 频分多路复用FDMA | 静态    | 使用不同**频率**                                                    |
-| 时分多路复用TDMA | 静态    | **时间片**轮转                                                     |
-| 波分多路复用WDMA | 静态    | 使用不同**光频**                                                    |
-| 码分多路复用CDMA | 静态    | 数学法，**向量**加法、内积、单位化                                           |
-| ALOHA协议    | 动态    | 想法就发，冲突重发                                                     |
-| 时隙ALOHA协议  | 动态    | 在信道分段的开始才能发                                                   |
-| 坚持CSMA协议   | 动态    | 忙**一直监听**，空闲**马上发**                                           |
-| 非坚持CSMA协议  | 动态    | 忙**随机**时间再监听，空闲**马上发**                                        |
-| p坚持CSMA协议  | 动态    | 忙**随机**时间再监听，空闲**p概率**发                                       |
-| CSMA-CD协议  | 动态、总线 | **检测算法、重发时间、最小帧长**                                            |
-| CSMA-CA协议  | 动态、无线 | 监听→空闲发出**请求连接RTS**→**响应请求CTS**→**预约信道**(告诉其他站点)→发完需**ACK确认帧** |
-| 轮询协议       | 动态    | 主结点循环**轮流询问**每个结点是否需要发送数据，需要则**独占信道**发送，没有MA                  |
-| 令牌传递协议     | 动态    | **令牌**(特殊格式的MAC控制帧)循环在每个结点流动，发数据要持有令牌                         |
+| 介质访问控制方式   | 类别    | 说明                                                                                               |
+|:----------:|:-----:|:------------------------------------------------------------------------------------------------:|
+| 频分多路复用FDMA | 静态    | 使用不同**频率**                                                                                       |
+| 时分多路复用TDMA | 静态    | **时间片**轮转                                                                                        |
+| 波分多路复用WDMA | 静态    | 使用不同**光频**                                                                                       |
+| 码分多路复用CDMA | 静态    | **向量加法**(原码反码0,1改-1,1，1发原码，0发反码，正交序列的各家芯片直接相加发送)、**向量内积**(收到向量和与某家原码内积/分量，-1是该家发0，1是该家发1，0是该家没发) |
+| ALOHA协议    | 动态    | 想法就发，冲突重发                                                                                        |
+| 时隙ALOHA协议  | 动态    | 在信道分段的开始才能发                                                                                      |
+| 坚持CSMA协议   | 动态    | 忙**一直监听**，空闲**马上发**                                                                              |
+| 非坚持CSMA协议  | 动态    | 忙**随机**时间再监听，空闲**马上发**                                                                           |
+| p坚持CSMA协议  | 动态    | 忙**随机**时间再监听，空闲**p概率**发                                                                          |
+| CSMA-CD协议  | 动态、总线 | **检测算法、重发时间、最小帧长**                                                                               |
+| CSMA-CA协议  | 动态、无线 | 监听→空闲发出**请求连接RTS**→**响应请求CTS**→**预约信道**(告诉其他站点)→发完需**ACK确认帧**                                    |
+| 轮询协议       | 动态    | 主结点循环**轮流询问**每个结点是否需要发送数据，需要则**独占信道**发送，没有MA                                                     |
+| 令牌传递协议     | 动态    | **令牌**(特殊格式的MAC控制帧)循环在每个结点流动，发数据要持有令牌                                                            |
 
 + CSMA-CD协议**检测算法**：当发送数据后经过$＜2倍的传播时延后$后接受到数据，说明发生冲突。
 
-+ CSMA-CD协议**重发时间**：第k次重发，随机数取值范围$[0,2k-1]$，经过等待时间$随机数×2倍的传播时延$，后重发，**重发最大15**，**第16次报告网络拥挤**，但**k最大只能取到10**。
++ CSMA-CD协议**重发时间**：第k次重发，随机数取值范围$[0,2k-1]$，经过等待时间$随机数×2倍的传播时延$，后重发，**重发达16次报告网络拥挤**，但**k最大只能取到10**。
 
 + CSMA-CD协议**最短帧长**：在检测到冲突时帧没有发完，**以太网最短帧长64B**。
 
@@ -327,22 +329,22 @@
 
                     总线型→星型（逻辑上仍是总线型）
 
-| MAC帧格式 | 大小       |
-|:------:|:--------:|
-| 前导码    | \        |
-| 目的地址   | 6B       |
-| 源地址    | 6B       |
-| 类型     | 2B       |
-| 数据     | 46-1500B |
-| FCS    | 4B       |
+| MAC帧格式   | 大小       |
+|:--------:|:--------:|
+| 前导码      | \        |
+| 目的地址     | 6B       |
+| 源地址      | 6B       |
+| 类型       | 2B       |
+| 数据       | 46-1500B |
+| 帧校验序列FCS | 4B       |
 
-+ **最短帧长64B**
++ **最短帧长64B=46+4+6+6+2**
 
-| 术语       | 说明                |
-|:--------:|:-----------------:|
-| 10BASE-T | 10Mb/s，T：双绞线，F：光纤 |
-| 通信适配器    | 网卡，MAC地址          |
-| 高速以太网    | ≥100Mb/s          |
+| 术语       | 说明                             |
+|:--------:|:------------------------------:|
+| 10BASE-T | 10Mb/s，T(twin)：双绞线，F(fiber)：光纤 |
+| 通信适配器    | 网卡，MAC地址                       |
+| 高速以太网    | ≥100Mb/s                       |
 
 ---
 
@@ -357,6 +359,7 @@
 | 地址3    | 目的地址DA     | BSSID    | 目的地址DA | 源地址SA   |
 | 序列控制   | \          | \        | \      | \       |
 | 地址4    | 源地址SA      | \        | \      | \       |
+| 说明     | 基站到基站      | 个人到个人    | 个人到基站  | 基站到个人   |
 
 + 基站分固定、无固定
 
@@ -370,15 +373,15 @@
 
         **特点**：全双工、简单、封装成帧、透明传输、多种网络层协议、多种类型链路、差错检测、检测连接状态、最大传送单元、无需纠错、无需流量控制
 
-| MAC帧格式 | 大小    |
-|:------:|:-----:|
-| F      | 1B    |
-| A      | 1B    |
-| C      | 1B    |
-| 协议     | 1B    |
-| 数据     | 1500B |
-| FCS    | 2B    |
-| F      | 1B    |
+| MAC帧格式   | 大小    |
+|:--------:|:-----:|
+| F        | 1B    |
+| A        | 1B    |
+| C        | 1B    |
+| 协议       | 1B    |
+| 数据       | 1500B |
+| 帧校验序列FCS | 2B    |
+| F        | 1B    |
 
 ---
 
@@ -454,18 +457,26 @@
 | 片偏移       | 13b   | 首部固定 | 代表分片在原分组的偏移，有多少个8B              |
 | 生存时间      | 1B    | 首部固定 | 生命值，经过路由器-1，变成0丢弃               |
 | 协议字段      | 1B    | 首部固定 | 表示传输层协议                         |
-| 首部检验和     | 2B    | 首部固定 | 首部的校验位，以2B为单位，求和取反              |
+| 首部校验和     | 2B    | 首部固定 | 首部的校验位，以2B为单位，求和取反              |
 | 源地址       | 4B    | 首部固定 | 发送方IPV4地址                       |
-| 目的地址      | 4B    | 首部固定 | 接收方IPV6地址                       |
+| 目的地址      | 4B    | 首部固定 | 接收方IPV4地址                       |
 | 可选字段      | 0-40B | 首部可变 | 排错、测量、安全                        |
 | 填充        | /     | 首部可变 | 凑成首部4B整                         |
 | 数据        | /     | 数据   | TCP\UDP等传输层报文段                  |
 
 + 各种长度记忆：1总8片的首4
 
-+ 求和取反：取反方法是与全0异或运算
++ 首部4B倍口诀：
+  
+  **版**面和**首**页都是**区**域**总**裁
+  
+  但这些**标识标志**都很**片**面
+  
+  故对其**生存协议**进行**校验**
 
-+ 差错和拥塞会丢失IP分组，可靠性传输至少需要序号和校验位
++ 求和取反：取反方法是与全1异或运算
+
++ 差错和拥塞会丢失IP分组，可靠性传输至少需要**序号**和**校验位**
 
 ---
 
@@ -515,15 +526,16 @@
 | 版本        | 0.5B | 首部   | 表示IP版本号，IPV4为0100，IPV6为0110 |
 | 优先性       | 1B   | 首部   | 区分数据报的类型和优先级                |
 | 流标签       | 2.5B | 首部   | 从特定源点到特定终点的一系列数据报，同流具相同标签   |
-| 有效载荷长度    | 2B   | 首部   | 有效载荷长度有多少个8B                |
-| 下一个首部     | 1B   | 首部   | 指向下一个扩展首部                   |
+| 有效载荷长度    | 2B   | 首部   | 扩展首部+数据的长度有多少个1B            |
+| 下一个首部     | 1B   | 首部   | 本数据报第一个扩展首部的类型，或者传输层的协议类型   |
 | 跳数限制      | 1B   | 首部   | 生命值，经过路由器-1，变成0丢弃           |
 | 源地址       | 16B  | 首部   | 发送方IPV6地址                   |
 | 目的地址      | 16B  | 首部   | 发送方IPV6地址                   |
 | 扩展首部      | \    | 有效载荷 | 必须8B倍数                      |
 | 数据        | \    | 数据   | TCP\UDP等传输层报文段              |
 
-+ 与IPV4区别：IP数量加大、区分服务/分片/校验/协议字段/长度统计移除、即插即用(直接分配**无需DHCP**)、只能主机分片
++ 首部8B倍口诀：**版本优先流**派**有下一跳**
++ 与IPV4区别：IP数量加大、区分服务/分片/校验/协议字段/各种长度统计移除、即插即用(直接分配**无需DHCP**)、只能主机分片
 
 ---
 
@@ -581,7 +593,7 @@
 
 2. 设置到它的每个邻居的**成本度量metric**
 
-3. 构造DD数据库描述分组，向邻站给出自己的链路状态数据库中的咋摘要信息（1）
+3. 构造DD数据库描述分组，向邻站给出自己的链路状态数据库中的咋**摘要**信息（1）
 
 4. 如果邻站没有我的信息会申请，向我发送LSR链路状态请求分组（2）
 
@@ -653,7 +665,7 @@
 | ack确认号、期待号 | 4B   | 固定首部 | 期待对方下一个分割报文段序号                         |
 | 数据偏移       | 0.5B | 固定首部 | 首部长度，多少个4B，首4                          |
 | 保留         | 6b   | 固定首部 | \                                      |
-| 控制紧急位UGR   | 6b   | 固定首部 | 紧急任务需要插队                               |
+| 控制紧急位UGR   | 1b   | 固定首部 | 紧急任务需要插队                               |
 | 控制确认位ACK   | 1b   | 固定首部 | 控制位的回复确认                               |
 | 控制推送位PSH   | 1b   | 固定首部 | 告诉接收方这个报文段要提早上交                        |
 | 控制复位位RST   | 1b   | 固定首部 | 发生大错重连                                 |
@@ -665,6 +677,18 @@
 | 首部可变       | \    | 可变首部 | \                                      |
 | 填充         | \    | 可变首部 | 凑4B整                                   |
 | 数据         | \    | 数据   | 应用层报文                                  |
+
++ 首部4B倍口诀：
+  
+  源头目的
+  
+  序号
+  
+  确认
+  
+  **首**页**保留**给**紧急窗口**
+  
+  使用要**校验紧急**情况
 
 ---
 
@@ -682,7 +706,7 @@
 
 3. 客户端为该连接分配缓存和变量，返回确认的确认，默认携带了应用层数据：
    
-   $seq＝x＋1$，$ack期待号＝y＋1$，$SYN＝0$，$ACK＝1$
+   $seq＝x＋1$，$ack期待号＝y＋1$，$ACK＝1$
 
 ---
 
@@ -718,11 +742,11 @@
 | 快速重传           | 收到**3个重复确认**，则认为该期待报文段丢失，马上重传 |
 | 窗口查询           | 当发送方窗口设置计算为0时，定期主动询问是否有窗口     |
 
-| 时机   | 采用算法 | 算法含义：调整的窗口值      |
-|:----:|:----:|:----------------:|
-| 刚开始  | 慢开始  | 1                |
-| 超时重传 | 慢开始  | 1                |
-| 快速重传 | 快恢复  | 重复时窗口数的一半，即慢开始门限 |
+| 时机       | 采用算法 | 算法含义：调整的窗口值      |
+|:--------:|:----:|:----------------:|
+| 刚开始      | 慢开始  | 1                |
+| **超时重传** | 慢开始  | 1                |
+| **快速重传** | 快恢复  | 重复时窗口数的一半，即慢开始门限 |
 
 | 两个增长阶段 | 采用算法 | 算法含义：窗口的增长率 |
 |:------:|:----:|:-----------:|
@@ -737,10 +761,10 @@
 
 ## 应用层
 
-| 服务模型      | 说明                                                      |
-|:---------:|:-------------------------------------------------------:|
-| 客户服务器模型CS | 服务器需永久提供服务、永久性访问地址/域名，客户端使用服务器服务是间歇性接入，动态IP，不与其他客户机直接通信 |
-| P2P模型     | 不存在永远在线的服务器，每台主机既可以提供服务也可以使用服务                          |
+| 服务模型      | 说明                                                          |
+|:---------:|:-----------------------------------------------------------:|
+| 客户服务器模型CS | 服务器需**永久**提供服务、永久性访问地址/域名，客户端使用服务器服务是间歇性接入，动态IP，不与其他客户机直接通信 |
+| P2P模型     | **不存在永远在线**的服务器，每台主机既可以提供服务也可以使用服务                          |
 
 | 协议汇总     | 协议      | 端口号     | 概念                     |
 |:--------:|:-------:|:-------:|:----------------------:|
@@ -755,6 +779,8 @@
 | DNS系统    | TCP/UDP | 53      | 域名解析协议，通过域名找IP地址       |
 | HTTP协议   | TCP     | 80      | 超文本传输协议，用于web资源请求和响应   |
 
++ 巧记：21岁发F现她，23岁谈T恋爱，25岁吵架删S好友，53岁后悔打D电话
+
 ---
 
 ### DHCP协议
@@ -767,9 +793,9 @@
 
 2. **DHCP服务器广播DHCP提供报文**："有，并提供"，可能有多个回复
 
-3. **主机广播DHCP请求报文**："我用某个DHCP服务器的IP地址"
+3. **主机广播DHCP请求报文**："我用某个DHCP服务器的IP地址？"
 
-4. **DHCP服务器广播DHCP确认报文**："用吧"，本DHCP服务器确认分配，其他DHCP服务器收回
+4. **DHCP服务器广播DHCP确认报文**："用吧"，本DHCP服务器确认分配，其他DHCP服务器请收回
 
 ---
 
