--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -344,14 +344,14 @@ b\sin\theta  &  br\cos\theta\\
 
 ### 旋转体的体积和表面积
 
-| 概念  | 公式                                     | 解释              |
-|:---:|:--------------------------------------:|:---------------:|
-| 体积  | $2\pi\iint_{被旋转区域D}{区域每点到旋转轴的距离r}dxdy$ | 区域**积旋转周长**得体积  |
-| 表面积 | $2\pi\iint_{被旋转线段L}{区域每点到旋转轴的距离r}ds$   | 线段**积旋转周长得**表面积 |
+| 概念  | 公式                                    | 解释              |
+|:---:|:-------------------------------------:|:---------------:|
+| 体积  | $2\pi\iint_{被旋转区域D}{区域每点到旋转轴的距离}dxdy$ | 区域**积旋转周长**得体积  |
+| 表面积 | $2\pi\int_{被旋转线段L}{区域每点到旋转轴的距离}ds$    | 线段**积旋转周长得**表面积 |
 
 + 上述公式的**前提**：被旋转的对象不可穿过旋转轴
 
-+ $ds=\sqrt{1+{y'}^2}dx=\sqrt{x_t'^2+y_t'^2}dt$，即**曲线长公式**
++ $ds=\sqrt{1+{y'}^2}dx（投影到x）=\sqrt{x_t'^2+y_t'^2}dt（极坐标）$，即**曲线长公式**
   
   $$
   \begin{align*}
